--- a/NYTBrowser/Base.lproj/Main.storyboard
+++ b/NYTBrowser/Base.lproj/Main.storyboard
@@ -42,7 +42,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="diX-a9-Nve">
-                                <rect key="frame" x="110" y="72" width="470" height="0.0"/>
+                                <rect key="frame" x="110" y="80" width="470" height="0.0"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="lessThanOrEqual" constant="75" id="U3f-sy-tOq"/>
                                 </constraints>
@@ -51,7 +51,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="i8k-hM-EaB">
-                                <rect key="frame" x="20" y="72" width="75" height="75"/>
+                                <rect key="frame" x="20" y="80" width="75" height="75"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="75" id="Ylz-BY-Yop"/>
                                     <constraint firstAttribute="width" constant="75" id="ZCM-ab-dBh"/>
@@ -60,13 +60,13 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="diX-a9-Nve" firstAttribute="top" secondItem="SYR-Wa-9uf" secondAttribute="bottom" constant="8" id="5Dy-0b-QPw"/>
+                            <constraint firstItem="diX-a9-Nve" firstAttribute="top" secondItem="SYR-Wa-9uf" secondAttribute="bottom" constant="16" id="5Dy-0b-QPw"/>
                             <constraint firstItem="GAO-Cl-Wes" firstAttribute="top" relation="greaterThanOrEqual" secondItem="0XM-y9-sOw" secondAttribute="bottom" id="9rb-34-l2s"/>
                             <constraint firstAttribute="trailingMargin" secondItem="diX-a9-Nve" secondAttribute="trailing" id="And-da-gr9"/>
                             <constraint firstItem="0XM-y9-sOw" firstAttribute="leading" secondItem="svH-Pt-448" secondAttribute="leading" constant="20" symbolic="YES" id="Tsc-yG-G1q"/>
                             <constraint firstItem="0XM-y9-sOw" firstAttribute="top" secondItem="SYR-Wa-9uf" secondAttribute="bottom" constant="91" id="bdH-d0-WdJ"/>
                             <constraint firstItem="diX-a9-Nve" firstAttribute="leading" secondItem="i8k-hM-EaB" secondAttribute="trailing" constant="15" id="n3E-ga-HRh"/>
-                            <constraint firstItem="i8k-hM-EaB" firstAttribute="top" secondItem="SYR-Wa-9uf" secondAttribute="bottom" constant="8" id="tCp-36-rvx"/>
+                            <constraint firstItem="i8k-hM-EaB" firstAttribute="top" secondItem="SYR-Wa-9uf" secondAttribute="bottom" constant="16" id="tCp-36-rvx"/>
                             <constraint firstAttribute="trailing" secondItem="0XM-y9-sOw" secondAttribute="trailing" constant="20" symbolic="YES" id="tHV-ZD-HQj"/>
                             <constraint firstAttribute="leadingMargin" secondItem="i8k-hM-EaB" secondAttribute="leading" id="xl4-36-GGs"/>
                         </constraints>
@@ -136,23 +136,16 @@
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="NYT-logo" translatesAutoresizingMaskIntoConstraints="NO" id="rDb-xj-uzF">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="NYT-logo" translatesAutoresizingMaskIntoConstraints="NO" id="rDb-xj-uzF">
                                                     <rect key="frame" x="8" y="8" width="75" height="75"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="75" id="Pr2-JW-lUc"/>
-                                                        <constraint firstAttribute="width" constant="75" id="irX-bF-IpI"/>
-                                                    </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PcF-E0-a0p">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PcF-E0-a0p">
                                                     <rect key="frame" x="91" y="8" width="501" height="60"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="60" id="xX1-ga-ve8"/>
-                                                    </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Publish date" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Agx-2H-iCk">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" fixedFrame="YES" text="Publish date" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Agx-2H-iCk">
                                                     <rect key="frame" x="91" y="68" width="501" height="20"/>
                                                     <fontDescription key="fontDescription" type="system" weight="light" pointSize="12"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -164,18 +157,6 @@
                                                 </view>
                                             </subviews>
                                             <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
-                                            <constraints>
-                                                <constraint firstAttribute="leadingMargin" secondItem="rDb-xj-uzF" secondAttribute="leading" id="Ax3-TO-zdh"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="Agx-2H-iCk" secondAttribute="bottom" constant="4" id="Dmj-XT-quR"/>
-                                                <constraint firstItem="rDb-xj-uzF" firstAttribute="top" secondItem="PcF-E0-a0p" secondAttribute="top" id="Phi-JH-2Fi"/>
-                                                <constraint firstAttribute="topMargin" secondItem="rDb-xj-uzF" secondAttribute="top" id="Ply-cM-L3c"/>
-                                                <constraint firstItem="Agx-2H-iCk" firstAttribute="leading" secondItem="rDb-xj-uzF" secondAttribute="trailing" constant="8" symbolic="YES" id="Qxw-7v-0B2"/>
-                                                <constraint firstAttribute="topMargin" secondItem="PcF-E0-a0p" secondAttribute="top" id="TDa-NW-Nm3"/>
-                                                <constraint firstItem="Agx-2H-iCk" firstAttribute="top" secondItem="PcF-E0-a0p" secondAttribute="bottom" id="VTR-9u-hw2"/>
-                                                <constraint firstItem="PcF-E0-a0p" firstAttribute="leading" secondItem="rDb-xj-uzF" secondAttribute="trailing" constant="8" symbolic="YES" id="aIP-wo-Aj3"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="Agx-2H-iCk" secondAttribute="trailing" id="fi7-Ow-JSa"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="PcF-E0-a0p" secondAttribute="trailing" id="z80-1m-JnB"/>
-                                            </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="publishDateLabel" destination="Agx-2H-iCk" id="WTr-jl-ceT"/>
@@ -194,11 +175,11 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="ugE-eD-h06" firstAttribute="top" secondItem="woF-zI-ve9" secondAttribute="bottom" constant="8" id="6qC-Ku-L4P"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="7Pv-Wn-wL4" secondAttribute="trailing" constant="-20" id="8dL-ZQ-oDY"/>
+                            <constraint firstAttribute="trailing" secondItem="7Pv-Wn-wL4" secondAttribute="trailing" id="8dL-ZQ-oDY"/>
                             <constraint firstAttribute="trailingMargin" secondItem="ugE-eD-h06" secondAttribute="trailing" id="Zzg-ZJ-5w3"/>
                             <constraint firstAttribute="leadingMargin" secondItem="ugE-eD-h06" secondAttribute="leading" id="enl-zl-epD"/>
                             <constraint firstItem="7Pv-Wn-wL4" firstAttribute="top" secondItem="ugE-eD-h06" secondAttribute="bottom" constant="8" id="k6P-cw-0oS"/>
-                            <constraint firstItem="7Pv-Wn-wL4" firstAttribute="leading" secondItem="myn-PK-ODu" secondAttribute="leadingMargin" constant="-20" id="pEc-er-fYo"/>
+                            <constraint firstItem="7Pv-Wn-wL4" firstAttribute="leading" secondItem="myn-PK-ODu" secondAttribute="leading" id="pEc-er-fYo"/>
                             <constraint firstItem="7Pv-Wn-wL4" firstAttribute="bottom" secondItem="nMn-tr-DNb" secondAttribute="top" id="zg4-Yc-Rec"/>
                         </constraints>
                     </view>
